fix: use upstream cosmos-sdk v0.45.9
update tendermint to v0.34.21-akash.1

refs ovrclk/engineering#597

Signed-off-by: Artur Troian <troian.ap@gmail.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -95,11 +95,17 @@ builds:
       - "{{ .Env.BUILD_VARS }}"
       - "{{ .Env.STRIP_FLAGS }}"
       - "-linkmode={{ .Env.LINKMODE }}"
-archives:
-  - id: akash
-    builds:
+universal_binaries:
+  - id: akash-darwin-universal
+    ids:
       - akash-darwin-amd64
       - akash-darwin-arm64
+    replace: true
+    name_template: "{{.ProjectName}}"
+archives:
+  - id: w/version
+    builds:
+      - akash-darwin-universal
       - akash-linux-amd64
       - akash-linux-arm64
       - akash-windows-amd64
@@ -108,19 +114,21 @@ archives:
     format: zip
     files:
       - none*
-
-dockers:
-  - ids:
+  - id: wo/version
+    builds:
+      - akash-darwin-universal
       - akash-linux-amd64
-    dockerfile: _build/Dockerfile.akash
-    goos: linux
-    goarch: amd64
-    image_templates:
-      - 'ghcr.io/ovrclk/akash:{{if eq .Env.MAINNET "true"}}stable{{else}}latest{{end}}'
-      - 'ghcr.io/ovrclk/akash:{{ .ShortCommit }}'
-      - 'ghcr.io/ovrclk/akash:{{ .Version }}'
+      - akash-linux-arm64
+      - akash-windows-amd64
+    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
+    wrap_in_directory: true
+    format: zip
+    files:
+      - none*
 brews:
   - name: "{{ .Env.HOMEBREW_NAME }}"
+    ids:
+      - wo/version
     tap:
       owner: ovrclk
       name: homebrew-tap
@@ -130,11 +138,69 @@ brews:
       {{ .Env.HOMEBREW_CUSTOM }}
     install: |
       bin.install "akash"
+dockers:
+  - dockerfile: _build/Dockerfile.akash
+    use: buildx
+    goarch: amd64
+    goos: linux
+    build_flag_templates:
+      - --platform=linux/amd64
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description={{ .ProjectName }}
+      - --label=org.opencontainers.image.url={{.GitURL}}
+      - --label=org.opencontainers.image.source={{.GitURL}}
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+    image_templates:
+      - 'ghcr.io/ovrclk/{{ .ProjectName }}:{{ .ShortCommit }}-amd64'
+      - 'ghcr.io/ovrclk/{{ .ProjectName }}:{{ .Version }}-amd64'
+      - 'ghcr.io/ovrclk/{{ .ProjectName }}:{{if eq .Env.STABLE "true"}}stable{{else}}latest{{end}}-amd64'
+  - dockerfile: _build/Dockerfile.akash
+    use: buildx
+    goarch: arm64
+    goos: linux
+    build_flag_templates:
+      - --platform=linux/arm64
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description={{ .ProjectName }}
+      - --label=org.opencontainers.image.url={{.GitURL}}
+      - --label=org.opencontainers.image.source={{.GitURL}}
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+    image_templates:
+      - 'ghcr.io/ovrclk/{{ .ProjectName }}:{{ .ShortCommit }}-arm64'
+      - 'ghcr.io/ovrclk/{{ .ProjectName }}:{{ .Version }}-arm64'
+      - 'ghcr.io/ovrclk/{{ .ProjectName }}:{{if eq .Env.STABLE "true"}}stable{{else}}latest{{end}}-arm64'
+docker_manifests:
+  - name_template: ghcr.io/ovrclk/{{ .ProjectName }}:{{ .ShortCommit }}
+    image_templates:
+      - ghcr.io/ovrclk/{{ .ProjectName }}:{{ .ShortCommit }}-amd64
+      - ghcr.io/ovrclk/{{ .ProjectName }}:{{ .ShortCommit }}-arm64
+  - name_template: ghcr.io/ovrclk/{{ .ProjectName }}:{{ .Version }}
+    image_templates:
+      - ghcr.io/ovrclk/{{ .ProjectName }}:{{ .Version }}-amd64
+      - ghcr.io/ovrclk/{{ .ProjectName }}:{{ .Version }}-arm64
+  - name_template: ghcr.io/ovrclk/{{ .ProjectName }}:latest
+    image_templates:
+      - ghcr.io/ovrclk/{{ .ProjectName }}:latest-amd64
+      - ghcr.io/ovrclk/{{ .ProjectName }}:latest-arm64
 
 nfpms:
-  - vendor: "Overclock Labs Inc."
+  - id: w/version
+    vendor: "Overclock Labs Inc."
     homepage: "http://ovrclk.com"
     maintainer: "Akash Network <hello@akash.network>"
+    formats:
+      - deb
+      - rpm
+    license: Apache 2.0
+  - id: wo/version
+    vendor: "Overclock Labs Inc."
+    homepage: "https://ovrclk.com"
+    maintainer: "Overclock Labs Inc. <hello@akash.network>"
+    file_name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
     formats:
       - deb
       - rpm
