--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,9 +6,6 @@ defaults:
 
 on:
   push:
-    branches:
-      - master
-      - mainnet/main
     tags:
       - v*
 
@@ -16,39 +13,35 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - run: git fetch --prune --unshallow
       - uses: c-py/action-dotenv-to-setenv@v3
         with:
-          env-file: .makerc
-      - uses: actions/setup-go@v2
+          env-file: .env
+      - uses: actions/setup-go@v3
         with:
           go-version: "${{ env.GOLANG_VERSION }}"
-      - name: branch name
-        id: branch_name
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: release version
+        run: echo "RELEASE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+      - name: release dry-run
+        run: make release
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: release publish
         run: |
-          echo ::set-output name=MAINNET::$(./script/mainnet-from-tag.sh ${GITHUB_REF#refs/tags/})
-          echo ::set-output name=RELEASE_TAG::${GITHUB_REF#refs/tags/}
-      - run: echo "Building for MAINNET=${{ steps.branch_name.outputs.MAINNET }}"
-      - if: (github.ref == 'refs/heads/master') || (github.ref == 'refs/heads/mainnet/main')
-        name: release dry-run GORELEASER_SKIP_VALIDATE=true
-        run: make release-dry-run GORELEASER_SKIP_VALIDATE=true
-      - if: startsWith(github.ref,'refs/tags/v')
-        name: release dry-run
-        run: make release-dry-run
-        env:
-          RELEASE_TAG: ${{ steps.branch_name.outputs.RELEASE_TAG }}
-      - if: startsWith(github.ref,'refs/tags/v') && github.repository == 'ovrclk/akash'
-        name: setup release environment
-        run: |-
-          echo '${{secrets.GHCR_USER}}:${{secrets.GHCR_TOKEN}}:ghcr.io' > .docker-creds
-          echo 'DOCKER_CREDS_FILE=.docker-creds'                    > .release-env
-          echo 'GITHUB_TOKEN=${{secrets.GORELEASER_ACCESS_TOKEN}}' >> .release-env
-      - if: startsWith(github.ref,'refs/tags/v') && github.repository == 'ovrclk/akash'
-        name: release publish
-        run: |-
           sudo rm -rf dist
           make release
         env:
-          MAINNET: ${{ steps.branch_name.outputs.MAINNET }}
-          RELEASE_TAG: ${{ steps.branch_name.outputs.RELEASE_TAG }}
+          GORELEASER_RELEASE: true
+          GORELEASER_MOUNT_CONFIG: true
+          MAINNET: true
+          # using PAT as homebrew is located in different repo
+          GITHUB_TOKEN: ${{ secrets.GORELEASER_ACCESS_TOKEN }}
